--- a/prob1/prob1.html
+++ b/prob1/prob1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nacim's Blog</title>
-    <link rel="stylesheet" href="../css/prob1.css">
+    <link rel="stylesheet" href="prob1.css">
 </head>
 <body>
     <header>
