--- a/prob2/prob2.html
+++ b/prob2/prob2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Run Your Pockets Restaurant</title>
-    <link rel="stylesheet" href="../css/prob2.css">
+    <link rel="stylesheet" href="prob2.css">
 </head>
 <body>
     <header>
