--- a/prob3/prob3.html
+++ b/prob3/prob3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Site</title>
-    <link rel="stylesheet" href="../css/prob3.css"">
+    <link rel="stylesheet" href="prob3.css"">
 </head>
 <body>
     <nav>
